syntax = "proto3";
// 指定模板类的包路径
option java_package = "cn.starboot.tim.common.packet.proto";
// 指定模板类的名称，名称必须是有实际业务意义的
option java_outer_classname = "LoginPacketProto";

// IM私有协议包
message LoginPacket{
    // 用户名ID
    string userId = 1;
    // token
    string token = 2;
}